--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ apply plugin: 'io.fabric'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.abhaybmicoc.app"
+        applicationId "com.abhaybmicoctest.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.2"
+        versionCode 1
+        versionName "1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -89,7 +89,7 @@ dependencies {
 
     compile 'com.jiechic.library:xUtils:2.6.14'
     implementation 'com.wang.avi:library:2.1.3'
-    compile(name:'c208blelibrary', ext:'aar')
+    compile(name: 'c208blelibrary', ext: 'aar')
 
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'com.dinuscxj:circleprogressbar:1.3.0'
