--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,12 @@
     android:versionName="201801">
 
     <uses-feature android:name="android.hardware.bluetooth" />
-    <uses-feature android:name="android.hardware.usb.host" android:required="true" />
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.usb.host"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -24,26 +28,40 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_SMS" tools:node="remove"/>
-    <uses-permission android:name="android.permission.SEND_SMS" tools:node="remove"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS" tools:node="remove"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" tools:node="remove"/>
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.READ_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.SEND_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.RECEIVE_SMS"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        tools:node="remove" />
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_PRIVILEGED"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.INTERACT_ACROSS_USERS_FULL"
+        tools:ignore="ProtectedPermissions" />
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="com.google.android.gm.permission.READ_CONTENT_PROVIDER" />
 
     <application
         android:name="com.abhaybmicoc.app.entities.AndMedical_App_Global"
-        android:label="@string/app_name"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:icon,android:theme"
+        android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@android:style/Theme.NoTitleBar"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:icon,android:theme">
 
         <activity
             android:name="com.abhaybmicoc.app.screen.PostVerifiedOtpScreen"
@@ -60,13 +78,13 @@
             android:name="com.abhaybmicoc.app.thermometer.ThermometerScreen"
             android:label="@string/title_activity_thermometer_screen"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
         <activity
             android:name="com.abhaybmicoc.app.activity.HeightActivity"
             android:label="@string/title_activity_height_screen"
             android:theme="@style/AppThemeAction"
-            android:windowSoftInputMode="stateHidden|adjustResize"/>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <activity
             android:name="com.abhaybmicoc.app.screen.ActivateScreen"
@@ -107,7 +125,7 @@
 
         <activity
             android:name="com.abhaybmicoc.app.activity.SplashActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
 
         <activity
             android:name="com.abhaybmicoc.app.screen.DisplayRecordScreen"
@@ -126,7 +144,7 @@
 
         <activity
             android:name="com.abhaybmicoc.app.glucose.GlucoseScanListActivity"
-            android:theme="@style/AppThemeGlucose"/>
+            android:theme="@style/AppThemeGlucose" />
 
         <activity
             android:name="com.abhaybmicoc.app.glucose.GlucoseActivity"
@@ -175,7 +193,7 @@
 
         <activity
             android:name="com.abhaybmicoc.app.hemoglobin.MainActivity"
-            android:theme="@style/AppThemeHemoGlobin"/>
+            android:theme="@style/AppThemeHemoGlobin" />
 
         <activity
             android:name="com.abhaybmicoc.app.oxygen.OxygenActivity"
@@ -185,7 +203,7 @@
         <activity
             android:name="com.abhaybmicoc.app.activity.BloodPressureActivity"
             android:finishOnTaskLaunch="true"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            android:theme="@android:style/Theme.NoTitleBar" />
 
         <activity
             android:name="com.abhaybmicoc.app.activity.InstructionActivity"
@@ -207,23 +225,52 @@
 
         <activity
             android:name="com.abhaybmicoc.app.activity.PrintPreviewActivity"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
 
         <!--for android 9-->
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
-        <uses-library android:name="com.samsung.android.sdk.bt" android:required="false" />
-        <uses-library android:name="com.htc.android.bluetooth.le" android:required="false" />
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+        <uses-library
+            android:name="com.samsung.android.sdk.bt"
+            android:required="false" />
+        <uses-library
+            android:name="com.htc.android.bluetooth.le"
+            android:required="false" />
 
         <service android:name="com.abhaybmicoc.app.BluetoothLeService" />
         <service android:name="com.abhaybmicoc.app.gatt.BleConnectService" />
         <service android:name="com.abhaybmicoc.app.gatt.BleReceivedService" />
-        <service android:name="com.abhaybmicoc.app.hemoglobin.UsbService" android:enabled="true" />
-        <service android:name="com.abhaybmicoc.app.oxygen.ble.BluetoothLeService" android:enabled="true" />
+        <service
+            android:name="com.abhaybmicoc.app.hemoglobin.UsbService"
+            android:enabled="true" />
+        <service
+            android:name="com.abhaybmicoc.app.oxygen.ble.BluetoothLeService"
+            android:enabled="true" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
-        <meta-data android:name="io.fabric.ApiKey" android:value="9009a3f13f6942069b56f1780e4e6ca704514f8e" />
-        <meta-data android:name="com.crashlytics.ApiKey" android:value="be3553252fe706b37ebb6102a8414776371c942d" /> <!-- glucose monitor data display -->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="9009a3f13f6942069b56f1780e4e6ca704514f8e" />
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="be3553252fe706b37ebb6102a8414776371c942d" /> <!-- glucose monitor data display -->
+
+
+        <service
+            android:name=".services.ConnectivityService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <receiver android:name=".services.ConnectivityReciever">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"
+                    tools:ignore="BatteryLife" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 </manifest>
