--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,8 @@ dependencies {
     implementation 'com.github.rehmanmuradali:ticker:1.0.0'
     implementation 'org.jetbrains:annotations:15.0'
 
+    // rating library for feedback form
+    implementation 'com.github.sujithkanna:smileyrating:1.6.8'
+
 }
 apply plugin: 'com.google.gms.google-services'
