--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:16.0.9'
 
     implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.jiechic.library:xUtils:2.6.14'
     implementation 'com.wang.avi:library:2.1.3'
